--- a/res/layout/daikiti_activity.xml
+++ b/res/layout/daikiti_activity.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="大吉" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/daikichi" />
 
-</LinearLayout>
+<ImageView
+    android:id="@+id/imageView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="120dp"
+    android:scaleType="fitXY"
+    android:src="@drawable/daikichi" />
+
+<TextView
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/imageView1"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="62dp"
+    android:text="大吉"
+    android:textSize="50sp" />
+
+<TextView
+    android:id="@+id/txvMsg1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/textView1"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="59dp"
+    android:text="今日の運勢は・・・" />
+
+</RelativeLayout>
