--- a/res/layout/daikyou_activity.xml
+++ b/res/layout/daikyou_activity.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="大凶" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/daikyou" />
 
-</LinearLayout>
+<ImageView
+    android:id="@+id/imageView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="90dp"
+    android:scaleType="fitXY"
+    android:src="@drawable/daikyou" />
+
+<TextView
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/imageView1"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="52dp"
+    android:text="大凶"
+    android:textSize="50sp" />
+
+<TextView
+    android:id="@+id/txvMsg4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/textView1"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="44dp"
+    android:text="今日の運勢は・・・" />
+
+</RelativeLayout>
